Java Programs and Applications/College Programmes/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-source
1.7
-noindex
-notree
-nohelp
-nonavbar
-d
D:\Arnab's Documents\College Programmes\doc
-classpath
C:\BlueJ\lib\bluejcore.jar;C:\BlueJ\lib\junit.jar;D:\Arnab's Documents\College Programmes
D:\Arnab's Documents\College Programmes\triangle.java
<---- end of javadoc command ---->
Loading source file D:\Arnab's Documents\College Programmes\triangle.java...
D:\Arnab's Documents\College Programmes\triangle.java:6: error: reached end of file while parsing
BufferedReader br=new BufferedReader(isr);
                                          ^
1 error
